chore: bela virtuosa almost final

--- a/template/pages/@/sections/inc/product-item.ejs
+++ b/template/pages/@/sections/inc/product-item.ejs
@@ -12,7 +12,7 @@ const imgObj = _.ecomUtils.img(opt.item)
 if (imgObj) {
   itemData.pictures = [{
     _id: _.ecomUtils.randomObjectId(),
-    normal: imgObj
+    big: imgObj
   }]
 }
 %>
