--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -1,1 +1,105 @@
 // Add your custom CSS here.
+// desktop acima de 14 polegadas
+@media  screen and (min-width: 1368px) {
+  .product-card__pictures {
+    height: 400px
+  }
+  .product-card__pictures img {
+    max-height: 400px
+  }
+}
+
+//desktop normal size
+@media  screen and (min-width: 998px) and (max-width: 1367px) {
+  //slider full
+  .banner-slider {
+    max-width: 100%;
+  }
+  .product-card__pictures {
+    height: 400px
+  }
+  .product-card__pictures img {
+    max-height: 400px
+  }
+}
+// apenas tablet
+@media screen and (min-width: 481px) and (max-width: 997px) {
+
+}
+// apenas mobile
+@media screen and (max-width: 480px) {
+
+}
+footer .header__logo {
+  margin-bottom: .5rem;
+}
+.top-bar__page-links a {
+    font-weight: 400;
+    color: #9e0017;
+}
+.header__nav a {
+  font-weight: 700;
+  color: #9e0017;
+}
+.top-bar__countdown {
+  background: #9e0017;
+}
+#search-form {
+  border: 2px solid #9e0017;
+}
+.header__search-btn svg {
+  font-size: 0px
+}
+.header__search-btn::after {
+  font-size: 1.5rem !important;
+  content: 'OK';
+  font-weight: bold;
+}
+.products-carousel__title {
+  color: #727272;
+  text-transform: uppercase;
+}
+.header__buttons .btn .badge {
+    top: 25px;
+    right: 17px;
+}
+#cart-count {
+  color: #000;
+  background: #fff;
+  font-weight: 400;
+}
+.product-card__name, .prices.product-card__prices {
+  text-align: center;
+}
+.product-card .prices__discount {
+  display: none;
+}
+.product-card__prices .prices__compare::before {
+  content: 'De ';
+}
+.product-card__prices .prices__compare {
+  text-decoration: none !important;
+}
+.product-card__prices .prices__value::before {
+  content: 'Por ';
+}
+.product-card__prices .prices__value {
+  color: #00e589;
+}
+.product-card__prices .prices__installments::before {
+  content: 'ou ';
+  font-weight: 400;
+}
+.product-card__prices .prices__installments span::before {
+  content: 'de ';
+  font-weight: 400;
+}
+.product-card__prices .prices__installments {
+  font-weight: 700 !important;
+}
+.top-bar, #header {
+  background: #fff;
+}
+#header {
+  border: none;
+}
