--- a/template/pages/@/layout/header.ejs
+++ b/template/pages/@/layout/header.ejs
@@ -60,6 +60,10 @@ if (header.categories_list) {
       <div class="row">
         <div class="col">
           <nav class="top-bar__page-links">
+            <a href="/">Até 10x <strong>sem juros</strong></a>
+            <a href="/">5% de <strong>desconto</strong> no boleto</a>
+            <a href="/">Enviamos para <strong>todo o Brasil</strong></a>
+            <a href="/">1° <strong>troca grátis</strong></a>
             <% if (header.contacts_stripe.pages) { %>
               <% header.contacts_stripe.pages.forEach(({ link, title }) => { %>
                 <a href="<%= link %>"><%= title %></a>
@@ -166,10 +170,15 @@ if (header.categories_list) {
             class="btn btn-lg"
             role="button"
             href="/app/#/account/"
+            style="font-size: 1rem"
             title="<%= _.dictionary('myAccount') %>"
           >
-            <i class="fas fa-user"></i>
+          <span class="d-none d-md-inline">Minha conta</span>
+          <span class="d-md-none"><i class="fas fa-user"></i></span>
+
           </a>
+          <span style="color: #9e0017" class="d-none d-md-inline">|</span>
+          <a style="font-size: 1rem" class="d-none d-md-inline btn btn-lg" href="/app/#/account/orders">Meus pedidos</a>
           <a
             id="cart-button"
             class="btn btn-lg"
@@ -177,7 +186,7 @@ if (header.categories_list) {
             href="/app/#/cart"
             title="<%= _.dictionary('openCart') %>"
           >
-            <i class="fas fa-shopping-bag"></i>
+            <img src="/img/uploads/sacolinha.png" alt="Sacola de pedidos">
             <span id="cart-count" class="badge badge-primary"></span>
           </a>
         </div>
@@ -198,7 +207,7 @@ if (header.categories_list) {
 
       <% if (header.search_input) { %>
         <div
-          class="d-none d-lg-block col-12 col-lg<%= categories.length ? '-3' : '' %> collapse show"
+          class="d-none d-lg-block col-12 col-lg collapse show"
           id="search-bar"
         >
           <form
@@ -247,17 +256,17 @@ if (header.categories_list) {
         </div>
       <% } %>
 
-      <% if (categories && categories.length) { %>
-        <div class="col d-none d-lg-block">
-          <nav class="header__nav">
-            <% categories.forEach(({ slug, name }) => { %>
-              <a href="javascript:;" onclick="toggleSidenav('<%= slug %>')">
-                <%= ` ${name} ` %>
-              </a>
-            <% }) %>
-          </nav>
-        </div>
-      <% } %>
     </div>
   </div>
 </header>
+<% if (categories && categories.length) { %>
+  <div class="col d-none d-lg-block" style="padding: 1rem;">
+    <nav class="header__nav">
+      <% categories.forEach(({ slug, name }) => { %>
+        <a href="javascript:;" onclick="toggleSidenav('<%= slug %>')">
+          <%= ` ${name} ` %>
+        </a>
+      <% }) %>
+    </nav>
+  </div>
+<% } %>
