--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -133,6 +133,7 @@ footer .header__logo {
 }
 .product__prices .prices__compare small {
   text-transform: none !important;
+  padding-right: .2rem;
 }
 .product__prices .prices__compare small:last-child {
   display: none;
