--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -1,11 +1,20 @@
 // Add your custom CSS here.
 // desktop acima de 14 polegadas
 @media  screen and (min-width: 1368px) {
-  .product-card__pictures {
-    height: 400px
+  .picture.product-card__picture {
+    max-height: 400px;
+    width: auto !important;
+    height: 400px !important;
   }
-  .product-card__pictures img {
-    max-height: 400px
+  .product-card__pictures {
+    max-height: 400px;
+    width: auto !important;
+    height: 400px !important;
+  }
+  .picture.product-card__picture img {
+    max-height: 400px;
+    width: auto !important;
+    height: 400px !important;
   }
   .product-card--small .product-card__picture img, .product-card--small .product-card__pictures {
     max-height: 300px !important;
@@ -23,11 +32,20 @@
   .banner-slider {
     max-width: 100%;
   }
-  .product-card__pictures {
-    height: 400px
+  .picture.product-card__picture {
+    max-height: 400px;
+    width: auto !important;
+    height: 400px !important;
   }
-  .product-card__pictures img {
-    max-height: 400px
+  .product-card__pictures {
+    max-height: 400px;
+    width: auto !important;
+    height: 400px !important;
+  }
+  .picture.product-card__picture img {
+    max-height: 400px;
+    width: auto !important;
+    height: 400px !important;
   }
   .product-card--small .product-card__picture img, .product-card--small .product-card__pictures {
     max-height: 300px !important;
@@ -47,11 +65,20 @@
   .pswp__zoom-wrap {
     transform: translate3d(6%, 1%, 0) scale(1) !important;
   }
-    .product-card__pictures {
+  .picture.product-card__picture {
+    max-height: 350px;
+    width: auto !important;
     height: 350px !important;
   }
-  .product-card__pictures img {
-    max-height: 350px !important;
+  .product-card__pictures {
+    max-height: 350px;
+    width: auto !important;
+    height: 350px !important;
+  }
+  .picture.product-card__picture img {
+    max-height: 350px;
+    width: auto !important;
+    height: 350px !important;
   }
 }
 // apenas mobile
@@ -65,17 +92,17 @@
   }
   .picture.product-card__picture {
     max-height: 250px;
-    width: 165px !important;
+    width: auto !important;
     height: 250px !important;
   }
   .product-card__pictures {
     max-height: 250px;
-    width: 165px !important;
+    width: auto !important;
     height: 250px !important;
   }
   .picture.product-card__picture img {
     max-height: 250px;
-    width: 165px !important;
+    width: auto !important;
     height: 250px !important;
   }
   .product-card {
