--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -132,3 +132,6 @@ footer .header__logo {
   color: #000 !important;
   font-size: var(--font-size) !important;
 }
+$product-card-picture-xs: 246px !default;
+$product-card-picture-sm: 350px !default;
+$product-card-picture-lg: 400px !default;
