--- a/template/pages/@/layout/footer.ejs
+++ b/template/pages/@/layout/footer.ejs
@@ -174,9 +174,9 @@ const networksWithColors = [
       </div>
 
       <div class="col-12 col-xl-5 order-lg-first">
-        <h2 class="footer__title footer__store">
-          <%= footer.description.title || _.settings.name %>
-        </h2>
+        <a href="/"><span style="display: none">Moda Evangélica - Bela Virtuosa</span>
+          <img id="logo" class="header__logo" src="/img/uploads/logo.png" alt="Moda Evangélica - Bela Virtuosa">
+        </a>
         <p><%- footer.description.text || _.settings.description %></p>
 
         <div class="mt-4 mb-3">
