--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -66,7 +66,7 @@ footer .header__logo {
 #search-form {
   border: 2px solid #9e0017;
 }
-.header__search-btn svg {
+.header__search-btn i {
   font-size: 0px
 }
 .header__search-btn::after {
