--- a/template/pages/@/layout/footer.ejs
+++ b/template/pages/@/layout/footer.ejs
@@ -7,7 +7,7 @@ const contacts = _.cms('contacts') || {}
 const networksWithColors = [
   ['facebook', '#3b5998'],
   ['youtube', '#ff0000'],
-  ['instagram', '#e1306c']
+  ['instagram', '#e1306c'],
   ['twitter', '#1da1f2'],
   ['pinterest', '#bd081c'],
   ['linkedin', '#0073b1']
