--- a/template/pages/@/layout/footer.ejs
+++ b/template/pages/@/layout/footer.ejs
@@ -180,7 +180,7 @@ const networksWithColors = [
 
       <div class="col-12 col-xl-5 order-lg-first">
         <a href="/"><span style="display: none">Moda Evangélica - Bela Virtuosa</span>
-          <img id="logo" class="header__logo" src="/img/uploads/logo-bela.webp" alt="Moda Evangélica - Bela Virtuosa">
+          <img id="logo" class="header__logo" src="/img/uploads/logo-bela.png" alt="Moda Evangélica - Bela Virtuosa">
         </a>
         <p><%- footer.description.text || _.settings.description %></p>
 
