--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -120,3 +120,7 @@ footer .header__logo {
   padding-left: .2rem;
   padding-right: .2rem;
 }
+//hide zoom
+.pswp--open {
+   display: none !important;
+}
