--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -132,3 +132,11 @@ footer .header__logo {
 .pswp--open {
    display: none !important;
 }
+.shipping-calculator__services::before {
+  content: "ESCOLHA SUA FORMA DE ENVIO";
+  font-weight: bold;
+  font-size: 1rem;
+}
+.account-addresses__card + button {
+  display: none;
+}
