--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -140,3 +140,6 @@ footer .header__logo {
 .account-addresses__card + button {
   display: none;
 }
+.order-info__toggle {
+display: none !important
+}
