--- a/template/pages/@/sections/product-block.ejs
+++ b/template/pages/@/sections/product-block.ejs
@@ -18,7 +18,7 @@
         <div class="col-12 col-md-6 mb-4">
           <!-- Picture(s) gallery will be inserted dynamically within `TheProduct` -->
           <% if (_.state.pictures) { %>
-            <% const imgObj = _.ecomUtils.img(_.state, null, 'big') %>
+            <% const imgObj = _.ecomUtils.img(_.state, null, 'zoom') %>
             <% if (imgObj) { %>
               <div id="product-gallery">
                 <picture class="product__picture">
