--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -143,3 +143,8 @@ footer .header__logo {
 .order-info__toggle {
 display: none !important
 }
+ecom-credits {
+  display: flex;
+  text-align: left;
+  justify-content: center;
+}
