--- a/template/pages/index.ejs
+++ b/template/pages/index.ejs
@@ -1,1 +1,20 @@
 <%- await include('@/view') %>
+
+<div class="modal modal-center fade" id="modal-size-guide" tabindex="-1" style="display: none;" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <button id="close-mobile" type="button" class="close" data-dismiss="modal" style="display: none; padding: 7px">
+          <span aria-hidden="true">x</span>
+        </button>
+        <div class="modal-header" style="display: flex;align-items: center; justify-content: space-between">
+
+          <button type="button" class="close" data-dismiss="modal">
+            <span aria-hidden="true">x</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <img src="/img/uploads/pop-up-bela.jpeg">
+        </div>
+      </div>
+    </div>
+  </div>
